--- a/style.css
+++ b/style.css
@@ -1,11 +1,23 @@
 body {
 background-color: black;
 }
-h1{
+h1 {
     color:black;
+    font-size: 400%;
+    
+    
     
 }
 #box1 {
-    background: rgb(255,0,0);
-    background: linear-gradient(90deg, rgba(255,0,0,1) 1%, rgba(0,0,0,1) 34%); 
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg,rgba(255,32,32,1) 50%, rgba(0,0,0,1) 100%);
+    
     } 
+
+#box2{
+    width: 750px;height: 500px;
+    background: red;
+    
+    
+    
+}
