--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ h1 {
     background-color: #048100;
   }
   
-  .container:hover .overlay1 {
+  .container:hover .overlay {
     opacity: 1;
   }
   
