--- a/style.css
+++ b/style.css
@@ -74,10 +74,10 @@ h1 {
     width: 416px;
     opacity: 0;
     transition: .5s ease;
-    background-color: #048100;
+    background-color: #2600ff;
   }
   
-  .container:hover .overlay {
+  .container:hover .overlay1 {
     opacity: 1;
   }
   
@@ -91,3 +91,11 @@ h1 {
     -ms-transform: translate(-50%, -50%);
   }
   
+  .row {
+    display: flex;
+  }
+  
+  .column {
+    flex: 33.33%;
+    padding: 5px;
+  }
