--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ h1 {
     background-color: #2600ff;
   }
   
-  .container:hover .overlay1 {
+  .container1:hover .overlay1 {
     opacity: 1;
   }
   
@@ -90,8 +90,45 @@ h1 {
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
   }
+  .container2 {
+    position: relative;
+    width: 416px;
+  }
   
-  .row {
+  .image2 {
+    display: block;
+    width: 416px;
+    height: 630px;
+  }
+  
+  .overlay2 {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 630px;
+    width: 416px;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #2600ff;
+  }
+  
+  .container2:hover .overlay2 {
+    opacity: 1;
+  }
+  
+  .text2 {
+    color: rgb(0, 0, 0);
+    font-size: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+  }
+  
+.row {
     display: flex;
   }
   
